--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
     </nav>
     <!-- Header Section-->
     <header>
-      <a href="https://github.com/Mayuri-Chikalge" target="_self"><img style="float:left"; src="image/profile.webp" alt="Candidate photo" width="230px" height="230px" margin-right="10"></a>
+      <a href="https://github.com/Mayuri-Chikalge" target="_self"><img style="float:left"; src="profile.webp" alt="Candidate photo" width="230px" height="230px" margin-right="10"></a>
       <table>
         <tr>
           <td><h1>Mayuri Dhaske</h1></td>
